Changes css styles for application logo to display correctly, even on small devices

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,9 +9,15 @@
     color: #FFFFFF;
 }
 
-.nav-title-image {
+img.nav-title-image {
     margin-top: 8px;
-    height: 27px;
+    height: 25px;
+}
+
+@media (max-width: 360px) {
+    img.nav-title-image {
+        height: 21px;
+    }
 }
 
 .bar-subheader .title {
